unpackaged/post/sample_surveys/objects/___NAMESPACE___Survey__c/fields/Contact_Method_Crisis__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method_Crisis__c</fullName>
    <description>GRMS post-diaster worker sample survey</description>
    <inlineHelpText>Best way to contact during the crisis</inlineHelpText>
    <label>Contact Method - Crisis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Messenger</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>