unpackaged/post/sample_surveys/objects/___NAMESPACE___Survey__c/fields/Insurer_Health__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Health__c</fullName>
    <description>GRMS post-disaster worker sample survey</description>
    <inlineHelpText>Add name of  your Health Insurance company</inlineHelpText>
    <label>Insurer Health</label>
    <length>100</length>
    <type>Text</type>
</CustomField>