unpackaged/post/sample_surveys/objects/___NAMESPACE___Survey__c/fields/Needs_of_Pets_in_HH__c.field-meta.xml
<CustomField>
    <fullName>Needs_of_Pets_in_HH__c</fullName>
    <description>GRMS post-disaster worker sample survey</description>
    <inlineHelpText>List the individual pets along with their needs</inlineHelpText>
    <label>Needs of Pets in HH</label>
    <type>TextArea</type>
</CustomField>