unpackaged/post/sample_surveys/objects/___NAMESPACE___Survey__c/fields/Priority_of_Needs__c.field-meta.xml
<CustomField>
    <fullName>Priority_of_Needs__c</fullName>
    <description>GRMS post-disaster worker sample survey</description>
    <inlineHelpText>Needs in order of most pressing first</inlineHelpText>
    <label>Priority of Needs</label>
    <type>TextArea</type>
</CustomField>