unpackaged/post/sample_surveys/objects/___NAMESPACE___Survey__c/fields/Respondent_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Respondent_Last_Name__c</fullName>
    <description>Respondent First Name for GRMS sample survey</description>
    <label>Respondent Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>